--- a/styles/stressed.css
+++ b/styles/stressed.css
@@ -85,6 +85,7 @@ html {
     height: auto;
     }
 
+
 @media screen and (max-width: 500px) {
 	#circle {
     position: absolute;
@@ -97,21 +98,23 @@ html {
     z-index:-1;
     background-color: #dffcff;
 	}
+   h1{
+     display:none;
+   }
+
   .container{
     height: 90vh;
     display: flex;
     flex-direction: column;
     row-gap: 6%;
   }
-  .container h1{
-     display:none;
-   }
-   .container p{
+  .container p{
     font-size: 4vmin;
     width: 100vw;
+    color: black;
   }
   
-  .container .video {
+  .container.video {
     width: 100%;
     height: 0;
     padding-bottom: 0;
@@ -120,9 +123,7 @@ html {
       width: 80%;
       height: auto;
   }
-  .container figure{
-    width: 100%;
-  }
+  
   .img{
     width: 100%;
     top: auto;
